fixed top picture size and subtext alignment

--- a/style.css
+++ b/style.css
@@ -18,11 +18,12 @@ body {
 
 .title-figure {
     max-width: 800px;
-    height: auto;
+    width: auto;
 }
 
 .description{
     color: black;
+    width: 600px;
     font-family: nyt-imperial,georgia,'times new roman',times,serif;
     font-size: 0.875rem;
     line-height: 20pt;
